crates/mun_codegen/src/snapshots/test__shift_op_u32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn leftshift(a: u32, b: u32) -> u32 { a << b }\npub fn rightshift(a: u32, b: u32) -> u32 { a >> b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo.1 = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo.1 addrspace(4)*]

define i32 @leftshift(i32 %0, i32 %1) {
body:
  %left_shift = shl i32 %0, %1
  ret i32 %left_shift
}

define i32 @rightshift(i32 %0, i32 %1) {
body:
  %right_shift = lshr i32 %0, %1
  ret i32 %right_shift
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::u32>::name" = private unnamed_addr constant [10 x i8] c"core::u32\00"
@"type_info::<core::u32>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"daz5d\A6\BE\88\81=&Y\A1+\C6\1D", [10 x i8]* @"type_info::<core::u32>::name", i32 32, i8 4, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::u32>"]

