crates/mun_codegen/src/snapshots/test__while_expr.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn foo(n:i32) {\n    while n<3 {\n        n += 1;\n    };\n\n    // This will be completely optimized out\n    while n<4 {\n        break;\n    };\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo.1 = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo.1 addrspace(4)*]

define void @foo(i32 %0) {
body:
  br label %whilecond

whilecond:                                        ; preds = %while, %body
  %n.0 = phi i32 [ %0, %body ], [ %add, %while ]
  %less = icmp slt i32 %n.0, 3
  br i1 %less, label %while, label %whilecond3

while:                                            ; preds = %whilecond
  %add = add i32 %n.0, 1
  br label %whilecond

whilecond3:                                       ; preds = %whilecond
  ret void
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::i32>::name" = private unnamed_addr constant [10 x i8] c"core::i32\00"
@"type_info::<core::i32>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\17yzt\19\D62\17\D25\95C\17\88[\FA", [10 x i8]* @"type_info::<core::i32>::name", i32 32, i8 4, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::i32>"]

